[FIX] Hide sidebar button not visible on dark theme

--- a/src/assets/scss/framework/utils/_skins.scss
+++ b/src/assets/scss/framework/utils/_skins.scss
@@ -39,8 +39,12 @@ body {
         #sidebar {
             background-color: $gray-900;
 
-            .toggle-menu span {
+            .toggle-menu span{
                 background-color: $gray-400;
+            }
+
+            #hideSidebar {
+                color: $gray-400;
             }
         }
 
